--- a/style.css
+++ b/style.css
@@ -8,15 +8,20 @@ body {
 }
 
 .container {
-    display: flex;
-    align-items: center;
-    gap: 20px;
+    position: relative;
+    width: 400px;
+    margin: 0 auto;
+    text-align: center;
+    top: 30vh;
+    min-height: 200px;
 }
 
 #message {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #222;
+    display: inline-block;
+    position: relative;
+    transition: transform 0.5s;
+    font-size: 2rem;
+    margin-top: 40px;
 }
 
 #fighting {
